# blog_rust_lambda

./: Cargo.toml  README.md
src/: dynamodb.rs  http_handler.rs  main.rs  s3.rs
