[package]
name = "blog_rust_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "1.0.1"
lambda_runtime = "1.0.1"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.43"

aws-config = "1.8.12"
aws-sdk-s3 = "1.117.0"
aws-sdk-dynamodb = "1.101.0"

tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
